--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título do site</title>
+    <title>Cursos Grátis</title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 + CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo necessitatibus enim, vel odio repellat ex nisi quam! Distinctio, modi debitis sed neque eveniet vitae libero, dolore, molestiae magnam at culpa!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de Javascript</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro, eum iusto? Dolore, quaerat dolores sunt consequuntur ea velit veniam rerum nobis, earum officia, ab tempora suscipit. Numquam ad ipsum quisquam!</p>
         </article>
     </main>
 </body>
