--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="images/curso-em-video-col.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 + CSS3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo necessitatibus enim, vel odio repellat ex nisi quam! Distinctio, modi debitis sed neque eveniet vitae libero, dolore, molestiae magnam at culpa!</p>
+            <img src="images/site.png" alt="Curso HTML5 e CSS3" class="lado">
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de Javascript</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro, eum iusto? Dolore, quaerat dolores sunt consequuntur ea velit veniam rerum nobis, earum officia, ab tempora suscipit. Numquam ad ipsum quisquam!</p>
+            <img src="images/javascript.png" alt="Curso Javascript" class="lado">
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
+            <p><a href="curso-js.html">Acesse o curso de Javascript</a></p>
         </article>
     </main>
 </body>
